Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 108 contains 1 shift/reduce conflicts.
state 109 contains 1 shift/reduce conflicts.
state 110 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> program                           (0)
	program -> "fun" "main" "(" ")" block              (1)
	block -> "{" stmt_list "}"                         (2)
	stmt_list -> stmt stmt_list                        (3)
	stmt_list ->                                       (4)
	stmt -> decl_stmt                                  (5)
	stmt -> assign_stmt                                (6)
	stmt -> if_stmt                                    (7)
	stmt -> if_expr_stmt                               (8)
	stmt -> while_stmt                                 (9)
	stmt -> "print" "(" expr ")"                       (10)
	stmt -> "println" "(" expr ")"                     (11)
	stmt -> expr_stmt                                  (12)
	expr_stmt -> expr                                  (13)
	if_expr_stmt -> if_expr                            (14)
	expr -> or_expr                                    (15)
	expr -> "readln" "(" ")"                           (16)
	if_expr -> "if" "(" expr ")" expr "else" expr      (17)
	assign_stmt -> id "=" expr                         (18)
	assign_stmt -> id "+=" expr                        (19)
	assign_stmt -> id "-=" expr                        (20)
	assign_stmt -> id "*=" expr                        (21)
	assign_stmt -> id "/=" expr                        (22)
	assign_stmt -> id "%=" expr                        (23)
	assign_stmt -> expr "++"                           (24)
	assign_stmt -> expr "--"                           (25)
	or_expr -> or_expr "||" and_expr                   (26)
	or_expr -> and_expr                                (27)
	and_expr -> and_expr "&&" eq_expr                  (28)
	and_expr -> eq_expr                                (29)
	eq_expr -> eq_expr "==" rel_expr                   (30)
	eq_expr -> eq_expr "!=" rel_expr                   (31)
	eq_expr -> rel_expr                                (32)
	rel_expr -> rel_expr "<" add_expr                  (33)
	rel_expr -> rel_expr "<=" add_expr                 (34)
	rel_expr -> rel_expr ">" add_expr                  (35)
	rel_expr -> rel_expr ">=" add_expr                 (36)
	rel_expr -> add_expr                               (37)
	add_expr -> add_expr "+" mul_expr                  (38)
	add_expr -> add_expr "-" mul_expr                  (39)
	add_expr -> mul_expr                               (40)
	mul_expr -> mul_expr "*" unary_expr                (41)
	mul_expr -> mul_expr "/" unary_expr                (42)
	mul_expr -> mul_expr "%" unary_expr                (43)
	mul_expr -> unary_expr                             (44)
	unary_expr -> "!" unary_expr                       (45)
	unary_expr -> primary                              (46)
	primary -> num                                     (47)
	primary -> id                                      (48)
	primary -> "true"                                  (49)
	primary -> "false"                                 (50)
	primary -> "(" expr ")"                            (51)
	primary -> string                                  (52)
	decl_stmt -> "var" id "=" expr                     (53)
	decl_stmt -> "val" id "=" expr                     (54)
	if_stmt -> "if" "(" expr ")" stmt "else" stmt      (55)
	if_stmt -> "if" "(" expr ")" stmt                  (56)
	if_stmt -> "if" "(" expr ")" block "else" block    (57)
	if_stmt -> "if" "(" expr ")" block                 (58)
	while_stmt -> "while" "(" expr ")" block           (59)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	num            { TNum $$ }
	"fun"          { TFun }
	"main"         { TMain }
	"+"            { TPlus }
	"-"            { TMinus }
	"*"            { TMult }
	"/"            { TDiv }
	"%"            { TMod }
	"++"           { TIncr }
	"--"           { TDecr }
	"true"         { TTrue }
	"false"        { TFalse }
	"print"        { TPrint }
	"println"      { TPrintln }
	"readln"       { TReadln }
	"val"          { TVal }
	"var"          { TVar }
	"="            { TAssign }
	"+="           { TPlusAssign }
	"-="           { TMinusAssign }
	"*="           { TMultAssign }
	"/="           { TDivAssign }
	"%="           { TModAssign }
	"while"        { TWhile }
	"if"           { TIf }
	"else"         { TElse }
	"("            { TLParen }
	")"            { TRParen }
	"{"            { TLBraces }
	"}"            { TRBraces }
	"=="           { TEqual }
	"!="           { TDifferent }
	">"            { TGreater }
	"<"            { TLess }
	">="           { TGreaterEq }
	"<="           { TLessEq }
	"!"            { TNot }
	"||"           { TOr }
	"&&"           { TAnd }
	string         { TString $$ }
	id             { TId $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	program         rule  1
	block           rule  2
	stmt_list       rules 3, 4
	stmt            rules 5, 6, 7, 8, 9, 10, 11, 12
	expr_stmt       rule  13
	if_expr_stmt    rule  14
	expr            rules 15, 16
	if_expr         rule  17
	assign_stmt     rules 18, 19, 20, 21, 22, 23, 24, 25
	or_expr         rules 26, 27
	and_expr        rules 28, 29
	eq_expr         rules 30, 31, 32
	rel_expr        rules 33, 34, 35, 36, 37
	add_expr        rules 38, 39, 40
	mul_expr        rules 41, 42, 43, 44
	unary_expr      rules 45, 46
	primary         rules 47, 48, 49, 50, 51, 52
	decl_stmt       rules 53, 54
	if_stmt         rules 55, 56, 57, 58
	while_stmt      rule  59

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . program                          (rule 0)

	"fun"          shift, and enter state 2

	program        goto state 3

State 1

	program -> . "fun" "main" "(" ")" block             (rule 1)

	"fun"          shift, and enter state 2


State 2

	program -> "fun" . "main" "(" ")" block             (rule 1)

	"main"         shift, and enter state 4


State 3

	%start_parser -> program .                          (rule 0)

	%eof           accept


State 4

	program -> "fun" "main" . "(" ")" block             (rule 1)

	"("            shift, and enter state 5


State 5

	program -> "fun" "main" "(" . ")" block             (rule 1)

	")"            shift, and enter state 6


State 6

	program -> "fun" "main" "(" ")" . block             (rule 1)

	"{"            shift, and enter state 8

	block          goto state 7

State 7

	program -> "fun" "main" "(" ")" block .             (rule 1)

	%eof           reduce using rule 1


State 8

	block -> "{" . stmt_list "}"                        (rule 2)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"print"        shift, and enter state 30
	"println"      shift, and enter state 31
	"readln"       shift, and enter state 32
	"val"          shift, and enter state 33
	"var"          shift, and enter state 34
	"while"        shift, and enter state 35
	"if"           shift, and enter state 36
	"("            shift, and enter state 37
	"}"            reduce using rule 4
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 40

	stmt_list      goto state 9
	stmt           goto state 10
	expr_stmt      goto state 11
	if_expr_stmt   goto state 12
	expr           goto state 13
	if_expr        goto state 14
	assign_stmt    goto state 15
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23
	decl_stmt      goto state 24
	if_stmt        goto state 25
	while_stmt     goto state 26

State 9

	block -> "{" stmt_list . "}"                        (rule 2)

	"}"            shift, and enter state 73


State 10

	stmt_list -> stmt . stmt_list                       (rule 3)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"print"        shift, and enter state 30
	"println"      shift, and enter state 31
	"readln"       shift, and enter state 32
	"val"          shift, and enter state 33
	"var"          shift, and enter state 34
	"while"        shift, and enter state 35
	"if"           shift, and enter state 36
	"("            shift, and enter state 37
	"}"            reduce using rule 4
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 40

	stmt_list      goto state 72
	stmt           goto state 10
	expr_stmt      goto state 11
	if_expr_stmt   goto state 12
	expr           goto state 13
	if_expr        goto state 14
	assign_stmt    goto state 15
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23
	decl_stmt      goto state 24
	if_stmt        goto state 25
	while_stmt     goto state 26

State 11

	stmt -> expr_stmt .                                 (rule 12)

	num            reduce using rule 12
	"true"         reduce using rule 12
	"false"        reduce using rule 12
	"print"        reduce using rule 12
	"println"      reduce using rule 12
	"readln"       reduce using rule 12
	"val"          reduce using rule 12
	"var"          reduce using rule 12
	"while"        reduce using rule 12
	"if"           reduce using rule 12
	"else"         reduce using rule 12
	"("            reduce using rule 12
	"}"            reduce using rule 12
	"!"            reduce using rule 12
	string         reduce using rule 12
	id             reduce using rule 12


State 12

	stmt -> if_expr_stmt .                              (rule 8)

	num            reduce using rule 8
	"true"         reduce using rule 8
	"false"        reduce using rule 8
	"print"        reduce using rule 8
	"println"      reduce using rule 8
	"readln"       reduce using rule 8
	"val"          reduce using rule 8
	"var"          reduce using rule 8
	"while"        reduce using rule 8
	"if"           reduce using rule 8
	"else"         reduce using rule 8
	"("            reduce using rule 8
	"}"            reduce using rule 8
	"!"            reduce using rule 8
	string         reduce using rule 8
	id             reduce using rule 8


State 13

	expr_stmt -> expr .                                 (rule 13)
	assign_stmt -> expr . "++"                          (rule 24)
	assign_stmt -> expr . "--"                          (rule 25)

	num            reduce using rule 13
	"++"           shift, and enter state 70
	"--"           shift, and enter state 71
	"true"         reduce using rule 13
	"false"        reduce using rule 13
	"print"        reduce using rule 13
	"println"      reduce using rule 13
	"readln"       reduce using rule 13
	"val"          reduce using rule 13
	"var"          reduce using rule 13
	"while"        reduce using rule 13
	"if"           reduce using rule 13
	"else"         reduce using rule 13
	"("            reduce using rule 13
	"}"            reduce using rule 13
	"!"            reduce using rule 13
	string         reduce using rule 13
	id             reduce using rule 13


State 14

	if_expr_stmt -> if_expr .                           (rule 14)

	num            reduce using rule 14
	"true"         reduce using rule 14
	"false"        reduce using rule 14
	"print"        reduce using rule 14
	"println"      reduce using rule 14
	"readln"       reduce using rule 14
	"val"          reduce using rule 14
	"var"          reduce using rule 14
	"while"        reduce using rule 14
	"if"           reduce using rule 14
	"else"         reduce using rule 14
	"("            reduce using rule 14
	"}"            reduce using rule 14
	"!"            reduce using rule 14
	string         reduce using rule 14
	id             reduce using rule 14


State 15

	stmt -> assign_stmt .                               (rule 6)

	num            reduce using rule 6
	"true"         reduce using rule 6
	"false"        reduce using rule 6
	"print"        reduce using rule 6
	"println"      reduce using rule 6
	"readln"       reduce using rule 6
	"val"          reduce using rule 6
	"var"          reduce using rule 6
	"while"        reduce using rule 6
	"if"           reduce using rule 6
	"else"         reduce using rule 6
	"("            reduce using rule 6
	"}"            reduce using rule 6
	"!"            reduce using rule 6
	string         reduce using rule 6
	id             reduce using rule 6


State 16

	expr -> or_expr .                                   (rule 15)
	or_expr -> or_expr . "||" and_expr                  (rule 26)

	num            reduce using rule 15
	"++"           reduce using rule 15
	"--"           reduce using rule 15
	"true"         reduce using rule 15
	"false"        reduce using rule 15
	"print"        reduce using rule 15
	"println"      reduce using rule 15
	"readln"       reduce using rule 15
	"val"          reduce using rule 15
	"var"          reduce using rule 15
	"while"        reduce using rule 15
	"if"           reduce using rule 15
	"else"         reduce using rule 15
	"("            reduce using rule 15
	")"            reduce using rule 15
	"}"            reduce using rule 15
	"!"            reduce using rule 15
	"||"           shift, and enter state 69
	string         reduce using rule 15
	id             reduce using rule 15


State 17

	or_expr -> and_expr .                               (rule 27)
	and_expr -> and_expr . "&&" eq_expr                 (rule 28)

	num            reduce using rule 27
	"++"           reduce using rule 27
	"--"           reduce using rule 27
	"true"         reduce using rule 27
	"false"        reduce using rule 27
	"print"        reduce using rule 27
	"println"      reduce using rule 27
	"readln"       reduce using rule 27
	"val"          reduce using rule 27
	"var"          reduce using rule 27
	"while"        reduce using rule 27
	"if"           reduce using rule 27
	"else"         reduce using rule 27
	"("            reduce using rule 27
	")"            reduce using rule 27
	"}"            reduce using rule 27
	"!"            reduce using rule 27
	"||"           reduce using rule 27
	"&&"           shift, and enter state 68
	string         reduce using rule 27
	id             reduce using rule 27


State 18

	and_expr -> eq_expr .                               (rule 29)
	eq_expr -> eq_expr . "==" rel_expr                  (rule 30)
	eq_expr -> eq_expr . "!=" rel_expr                  (rule 31)

	num            reduce using rule 29
	"++"           reduce using rule 29
	"--"           reduce using rule 29
	"true"         reduce using rule 29
	"false"        reduce using rule 29
	"print"        reduce using rule 29
	"println"      reduce using rule 29
	"readln"       reduce using rule 29
	"val"          reduce using rule 29
	"var"          reduce using rule 29
	"while"        reduce using rule 29
	"if"           reduce using rule 29
	"else"         reduce using rule 29
	"("            reduce using rule 29
	")"            reduce using rule 29
	"}"            reduce using rule 29
	"=="           shift, and enter state 66
	"!="           shift, and enter state 67
	"!"            reduce using rule 29
	"||"           reduce using rule 29
	"&&"           reduce using rule 29
	string         reduce using rule 29
	id             reduce using rule 29


State 19

	eq_expr -> rel_expr .                               (rule 32)
	rel_expr -> rel_expr . "<" add_expr                 (rule 33)
	rel_expr -> rel_expr . "<=" add_expr                (rule 34)
	rel_expr -> rel_expr . ">" add_expr                 (rule 35)
	rel_expr -> rel_expr . ">=" add_expr                (rule 36)

	num            reduce using rule 32
	"++"           reduce using rule 32
	"--"           reduce using rule 32
	"true"         reduce using rule 32
	"false"        reduce using rule 32
	"print"        reduce using rule 32
	"println"      reduce using rule 32
	"readln"       reduce using rule 32
	"val"          reduce using rule 32
	"var"          reduce using rule 32
	"while"        reduce using rule 32
	"if"           reduce using rule 32
	"else"         reduce using rule 32
	"("            reduce using rule 32
	")"            reduce using rule 32
	"}"            reduce using rule 32
	"=="           reduce using rule 32
	"!="           reduce using rule 32
	">"            shift, and enter state 62
	"<"            shift, and enter state 63
	">="           shift, and enter state 64
	"<="           shift, and enter state 65
	"!"            reduce using rule 32
	"||"           reduce using rule 32
	"&&"           reduce using rule 32
	string         reduce using rule 32
	id             reduce using rule 32


State 20

	rel_expr -> add_expr .                              (rule 37)
	add_expr -> add_expr . "+" mul_expr                 (rule 38)
	add_expr -> add_expr . "-" mul_expr                 (rule 39)

	num            reduce using rule 37
	"+"            shift, and enter state 60
	"-"            shift, and enter state 61
	"++"           reduce using rule 37
	"--"           reduce using rule 37
	"true"         reduce using rule 37
	"false"        reduce using rule 37
	"print"        reduce using rule 37
	"println"      reduce using rule 37
	"readln"       reduce using rule 37
	"val"          reduce using rule 37
	"var"          reduce using rule 37
	"while"        reduce using rule 37
	"if"           reduce using rule 37
	"else"         reduce using rule 37
	"("            reduce using rule 37
	")"            reduce using rule 37
	"}"            reduce using rule 37
	"=="           reduce using rule 37
	"!="           reduce using rule 37
	">"            reduce using rule 37
	"<"            reduce using rule 37
	">="           reduce using rule 37
	"<="           reduce using rule 37
	"!"            reduce using rule 37
	"||"           reduce using rule 37
	"&&"           reduce using rule 37
	string         reduce using rule 37
	id             reduce using rule 37


State 21

	add_expr -> mul_expr .                              (rule 40)
	mul_expr -> mul_expr . "*" unary_expr               (rule 41)
	mul_expr -> mul_expr . "/" unary_expr               (rule 42)
	mul_expr -> mul_expr . "%" unary_expr               (rule 43)

	num            reduce using rule 40
	"+"            reduce using rule 40
	"-"            reduce using rule 40
	"*"            shift, and enter state 57
	"/"            shift, and enter state 58
	"%"            shift, and enter state 59
	"++"           reduce using rule 40
	"--"           reduce using rule 40
	"true"         reduce using rule 40
	"false"        reduce using rule 40
	"print"        reduce using rule 40
	"println"      reduce using rule 40
	"readln"       reduce using rule 40
	"val"          reduce using rule 40
	"var"          reduce using rule 40
	"while"        reduce using rule 40
	"if"           reduce using rule 40
	"else"         reduce using rule 40
	"("            reduce using rule 40
	")"            reduce using rule 40
	"}"            reduce using rule 40
	"=="           reduce using rule 40
	"!="           reduce using rule 40
	">"            reduce using rule 40
	"<"            reduce using rule 40
	">="           reduce using rule 40
	"<="           reduce using rule 40
	"!"            reduce using rule 40
	"||"           reduce using rule 40
	"&&"           reduce using rule 40
	string         reduce using rule 40
	id             reduce using rule 40


State 22

	mul_expr -> unary_expr .                            (rule 44)

	num            reduce using rule 44
	"+"            reduce using rule 44
	"-"            reduce using rule 44
	"*"            reduce using rule 44
	"/"            reduce using rule 44
	"%"            reduce using rule 44
	"++"           reduce using rule 44
	"--"           reduce using rule 44
	"true"         reduce using rule 44
	"false"        reduce using rule 44
	"print"        reduce using rule 44
	"println"      reduce using rule 44
	"readln"       reduce using rule 44
	"val"          reduce using rule 44
	"var"          reduce using rule 44
	"while"        reduce using rule 44
	"if"           reduce using rule 44
	"else"         reduce using rule 44
	"("            reduce using rule 44
	")"            reduce using rule 44
	"}"            reduce using rule 44
	"=="           reduce using rule 44
	"!="           reduce using rule 44
	">"            reduce using rule 44
	"<"            reduce using rule 44
	">="           reduce using rule 44
	"<="           reduce using rule 44
	"!"            reduce using rule 44
	"||"           reduce using rule 44
	"&&"           reduce using rule 44
	string         reduce using rule 44
	id             reduce using rule 44


State 23

	unary_expr -> primary .                             (rule 46)

	num            reduce using rule 46
	"+"            reduce using rule 46
	"-"            reduce using rule 46
	"*"            reduce using rule 46
	"/"            reduce using rule 46
	"%"            reduce using rule 46
	"++"           reduce using rule 46
	"--"           reduce using rule 46
	"true"         reduce using rule 46
	"false"        reduce using rule 46
	"print"        reduce using rule 46
	"println"      reduce using rule 46
	"readln"       reduce using rule 46
	"val"          reduce using rule 46
	"var"          reduce using rule 46
	"while"        reduce using rule 46
	"if"           reduce using rule 46
	"else"         reduce using rule 46
	"("            reduce using rule 46
	")"            reduce using rule 46
	"}"            reduce using rule 46
	"=="           reduce using rule 46
	"!="           reduce using rule 46
	">"            reduce using rule 46
	"<"            reduce using rule 46
	">="           reduce using rule 46
	"<="           reduce using rule 46
	"!"            reduce using rule 46
	"||"           reduce using rule 46
	"&&"           reduce using rule 46
	string         reduce using rule 46
	id             reduce using rule 46


State 24

	stmt -> decl_stmt .                                 (rule 5)

	num            reduce using rule 5
	"true"         reduce using rule 5
	"false"        reduce using rule 5
	"print"        reduce using rule 5
	"println"      reduce using rule 5
	"readln"       reduce using rule 5
	"val"          reduce using rule 5
	"var"          reduce using rule 5
	"while"        reduce using rule 5
	"if"           reduce using rule 5
	"else"         reduce using rule 5
	"("            reduce using rule 5
	"}"            reduce using rule 5
	"!"            reduce using rule 5
	string         reduce using rule 5
	id             reduce using rule 5


State 25

	stmt -> if_stmt .                                   (rule 7)

	num            reduce using rule 7
	"true"         reduce using rule 7
	"false"        reduce using rule 7
	"print"        reduce using rule 7
	"println"      reduce using rule 7
	"readln"       reduce using rule 7
	"val"          reduce using rule 7
	"var"          reduce using rule 7
	"while"        reduce using rule 7
	"if"           reduce using rule 7
	"else"         reduce using rule 7
	"("            reduce using rule 7
	"}"            reduce using rule 7
	"!"            reduce using rule 7
	string         reduce using rule 7
	id             reduce using rule 7


State 26

	stmt -> while_stmt .                                (rule 9)

	num            reduce using rule 9
	"true"         reduce using rule 9
	"false"        reduce using rule 9
	"print"        reduce using rule 9
	"println"      reduce using rule 9
	"readln"       reduce using rule 9
	"val"          reduce using rule 9
	"var"          reduce using rule 9
	"while"        reduce using rule 9
	"if"           reduce using rule 9
	"else"         reduce using rule 9
	"("            reduce using rule 9
	"}"            reduce using rule 9
	"!"            reduce using rule 9
	string         reduce using rule 9
	id             reduce using rule 9


State 27

	primary -> num .                                    (rule 47)

	num            reduce using rule 47
	"+"            reduce using rule 47
	"-"            reduce using rule 47
	"*"            reduce using rule 47
	"/"            reduce using rule 47
	"%"            reduce using rule 47
	"++"           reduce using rule 47
	"--"           reduce using rule 47
	"true"         reduce using rule 47
	"false"        reduce using rule 47
	"print"        reduce using rule 47
	"println"      reduce using rule 47
	"readln"       reduce using rule 47
	"val"          reduce using rule 47
	"var"          reduce using rule 47
	"while"        reduce using rule 47
	"if"           reduce using rule 47
	"else"         reduce using rule 47
	"("            reduce using rule 47
	")"            reduce using rule 47
	"}"            reduce using rule 47
	"=="           reduce using rule 47
	"!="           reduce using rule 47
	">"            reduce using rule 47
	"<"            reduce using rule 47
	">="           reduce using rule 47
	"<="           reduce using rule 47
	"!"            reduce using rule 47
	"||"           reduce using rule 47
	"&&"           reduce using rule 47
	string         reduce using rule 47
	id             reduce using rule 47


State 28

	primary -> "true" .                                 (rule 49)

	num            reduce using rule 49
	"+"            reduce using rule 49
	"-"            reduce using rule 49
	"*"            reduce using rule 49
	"/"            reduce using rule 49
	"%"            reduce using rule 49
	"++"           reduce using rule 49
	"--"           reduce using rule 49
	"true"         reduce using rule 49
	"false"        reduce using rule 49
	"print"        reduce using rule 49
	"println"      reduce using rule 49
	"readln"       reduce using rule 49
	"val"          reduce using rule 49
	"var"          reduce using rule 49
	"while"        reduce using rule 49
	"if"           reduce using rule 49
	"else"         reduce using rule 49
	"("            reduce using rule 49
	")"            reduce using rule 49
	"}"            reduce using rule 49
	"=="           reduce using rule 49
	"!="           reduce using rule 49
	">"            reduce using rule 49
	"<"            reduce using rule 49
	">="           reduce using rule 49
	"<="           reduce using rule 49
	"!"            reduce using rule 49
	"||"           reduce using rule 49
	"&&"           reduce using rule 49
	string         reduce using rule 49
	id             reduce using rule 49


State 29

	primary -> "false" .                                (rule 50)

	num            reduce using rule 50
	"+"            reduce using rule 50
	"-"            reduce using rule 50
	"*"            reduce using rule 50
	"/"            reduce using rule 50
	"%"            reduce using rule 50
	"++"           reduce using rule 50
	"--"           reduce using rule 50
	"true"         reduce using rule 50
	"false"        reduce using rule 50
	"print"        reduce using rule 50
	"println"      reduce using rule 50
	"readln"       reduce using rule 50
	"val"          reduce using rule 50
	"var"          reduce using rule 50
	"while"        reduce using rule 50
	"if"           reduce using rule 50
	"else"         reduce using rule 50
	"("            reduce using rule 50
	")"            reduce using rule 50
	"}"            reduce using rule 50
	"=="           reduce using rule 50
	"!="           reduce using rule 50
	">"            reduce using rule 50
	"<"            reduce using rule 50
	">="           reduce using rule 50
	"<="           reduce using rule 50
	"!"            reduce using rule 50
	"||"           reduce using rule 50
	"&&"           reduce using rule 50
	string         reduce using rule 50
	id             reduce using rule 50


State 30

	stmt -> "print" . "(" expr ")"                      (rule 10)

	"("            shift, and enter state 56


State 31

	stmt -> "println" . "(" expr ")"                    (rule 11)

	"("            shift, and enter state 55


State 32

	expr -> "readln" . "(" ")"                          (rule 16)

	"("            shift, and enter state 54


State 33

	decl_stmt -> "val" . id "=" expr                    (rule 54)

	id             shift, and enter state 53


State 34

	decl_stmt -> "var" . id "=" expr                    (rule 53)

	id             shift, and enter state 52


State 35

	while_stmt -> "while" . "(" expr ")" block          (rule 59)

	"("            shift, and enter state 51


State 36

	if_expr -> "if" . "(" expr ")" expr "else" expr     (rule 17)
	if_stmt -> "if" . "(" expr ")" stmt "else" stmt     (rule 55)
	if_stmt -> "if" . "(" expr ")" stmt                 (rule 56)
	if_stmt -> "if" . "(" expr ")" block "else" block    (rule 57)
	if_stmt -> "if" . "(" expr ")" block                (rule 58)

	"("            shift, and enter state 50


State 37

	primary -> "(" . expr ")"                           (rule 51)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 49
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 38

	unary_expr -> "!" . unary_expr                      (rule 45)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	unary_expr     goto state 47
	primary        goto state 23

State 39

	primary -> string .                                 (rule 52)

	num            reduce using rule 52
	"+"            reduce using rule 52
	"-"            reduce using rule 52
	"*"            reduce using rule 52
	"/"            reduce using rule 52
	"%"            reduce using rule 52
	"++"           reduce using rule 52
	"--"           reduce using rule 52
	"true"         reduce using rule 52
	"false"        reduce using rule 52
	"print"        reduce using rule 52
	"println"      reduce using rule 52
	"readln"       reduce using rule 52
	"val"          reduce using rule 52
	"var"          reduce using rule 52
	"while"        reduce using rule 52
	"if"           reduce using rule 52
	"else"         reduce using rule 52
	"("            reduce using rule 52
	")"            reduce using rule 52
	"}"            reduce using rule 52
	"=="           reduce using rule 52
	"!="           reduce using rule 52
	">"            reduce using rule 52
	"<"            reduce using rule 52
	">="           reduce using rule 52
	"<="           reduce using rule 52
	"!"            reduce using rule 52
	"||"           reduce using rule 52
	"&&"           reduce using rule 52
	string         reduce using rule 52
	id             reduce using rule 52


State 40

	assign_stmt -> id . "=" expr                        (rule 18)
	assign_stmt -> id . "+=" expr                       (rule 19)
	assign_stmt -> id . "-=" expr                       (rule 20)
	assign_stmt -> id . "*=" expr                       (rule 21)
	assign_stmt -> id . "/=" expr                       (rule 22)
	assign_stmt -> id . "%=" expr                       (rule 23)
	primary -> id .                                     (rule 48)

	num            reduce using rule 48
	"+"            reduce using rule 48
	"-"            reduce using rule 48
	"*"            reduce using rule 48
	"/"            reduce using rule 48
	"%"            reduce using rule 48
	"++"           reduce using rule 48
	"--"           reduce using rule 48
	"true"         reduce using rule 48
	"false"        reduce using rule 48
	"print"        reduce using rule 48
	"println"      reduce using rule 48
	"readln"       reduce using rule 48
	"val"          reduce using rule 48
	"var"          reduce using rule 48
	"="            shift, and enter state 41
	"+="           shift, and enter state 42
	"-="           shift, and enter state 43
	"*="           shift, and enter state 44
	"/="           shift, and enter state 45
	"%="           shift, and enter state 46
	"while"        reduce using rule 48
	"if"           reduce using rule 48
	"else"         reduce using rule 48
	"("            reduce using rule 48
	"}"            reduce using rule 48
	"=="           reduce using rule 48
	"!="           reduce using rule 48
	">"            reduce using rule 48
	"<"            reduce using rule 48
	">="           reduce using rule 48
	"<="           reduce using rule 48
	"!"            reduce using rule 48
	"||"           reduce using rule 48
	"&&"           reduce using rule 48
	string         reduce using rule 48
	id             reduce using rule 48


State 41

	assign_stmt -> id "=" . expr                        (rule 18)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 100
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 42

	assign_stmt -> id "+=" . expr                       (rule 19)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 99
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 43

	assign_stmt -> id "-=" . expr                       (rule 20)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 98
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 44

	assign_stmt -> id "*=" . expr                       (rule 21)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 97
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 45

	assign_stmt -> id "/=" . expr                       (rule 22)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 96
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 46

	assign_stmt -> id "%=" . expr                       (rule 23)

	num            shift, and enter state 27
	"true"         shift, and enter state 28
	"false"        shift, and enter state 29
	"readln"       shift, and enter state 32
	"("            shift, and enter state 37
	"!"            shift, and enter state 38
	string         shift, and enter state 39
	id             shift, and enter state 48

	expr           goto state 95
	or_expr        goto state 16
	and_expr       goto state 17
	eq_expr        goto state 18
	rel_expr       goto state 19
	add_expr       goto state 20
	mul_expr       goto state 21
	unary_expr     goto state 22
	primary        goto state 23

State 47

	unary_expr -> "!" unary_expr .                      (rule 45)
